--- a/css/index.css
+++ b/css/index.css
@@ -101,13 +101,13 @@ body {
     transition: .5s;
 }
 
-.nav-bar a:hover, .title:hover {
+.nav-bar a:hover, .title:hover, .nav-bar a.active {
     color: #90D26D;
 }
 
 .side-bar a:hover {
     color: #90D26D;
-    background-color: #ffffff;
+    background-color: #FCDC94;
     border-radius: 20px;
 }
 
@@ -149,10 +149,14 @@ body {
 }
 
 .side-bar .dropdown-content li a {
-    color: #90D26D;
+    color: #FF8F00;
     padding: 5px 0;
     text-decoration: none;
     display: block;
+}
+
+.side-bar .dropdown-content li a:hover {
+    color: #90D26D;
 }
 
 .menu-bar {
