--- a/css/menu.css
+++ b/css/menu.css
@@ -23,7 +23,7 @@ body {
     display: flex;
     height: 80px;
     padding: 0 30px;
-    background: white;
+    background: transparent;
     align-items: center;
     justify-content: space-between;
 }
@@ -44,7 +44,7 @@ body {
     text-decoration: none; 
     font-family: 'Playfair Display', sans-serif;
     font-weight: 900;
-    color: black;
+    color: #FF8F00;
     font-size: 30px;
     padding-right: 20px;
     transition: .5s;
@@ -61,7 +61,7 @@ body {
     display: flex;
     text-decoration: none;
     padding: 0 20px;
-    color: black;
+    color: #FF8F00;
     font-size: 20px;
     font-weight: bold;
     transition: .5s;
@@ -92,19 +92,19 @@ body {
     display: flex;
     text-decoration: none;
     padding: 0 20px;
-    color: black;
+    color: #FF8F00;
     font-size: 20px;
     font-weight: bold;
     transition: .5s;
 }
 
-.nav-bar a:hover, .title:hover {
+.nav-bar a:hover, .title:hover, .nav-bar a.active {
     color: #90D26D;
 }
 
 .side-bar a:hover {
     color: #90D26D;
-    background-color: #ffffff;
+    background-color: #FCDC94;
     border-radius: 20px;
 }
 
@@ -122,7 +122,7 @@ body {
 }
 
 .dropdown-content li a {
-    color: black;
+    color: #FF8F00;
     padding: 5px 16px;
     text-decoration: none;
     display: block;
@@ -146,75 +146,17 @@ body {
 }
 
 .side-bar .dropdown-content li a {
-    color: #90D26D;
+    color: #FF8F00;
     padding: 5px 0;
     text-decoration: none;
     display: block;
 }
 
-.menu-bar {
-    display: none;
-}
-
-.text {
-    display: flex;
-    flex-direction: column;
-    width: 100%;
-    height: 600px;
-    align-items: center;
-    justify-content: center;
-
-}
-
-.text .welcome {
-    color: #F6B17A;
-    font-size: 45px;
-}
-
-.text .destination {
-    color: #FF8F00;
-    font-size: 50px;
-    padding-bottom: 5px;
-    font-family: "Playfair Dispair";
-    font-weight: 900;
-}
-
-.text p {
-    text-align: center;
-    width: 600px;
-    line-height: 1.5;
-    font-size: 20px;
-    font-weight: 500;
-    color: #F5F7F8;
-}
-
-.text .btn {
-    margin-top: 25px;
-    border: solid 2px;
-    border-radius: 20px;
-    width: 200px;
-    height: 60px;
-    font-size: 20px;
-    background-color: #ffffff;
-}
-
-.btn a {
-    text-decoration: none;
-    font-size: 20px;
-    font-weight: 900;
+.side-bar .dropdown-content li a:hover {
     color: #90D26D;
-    transition: .25s;
 }
 
-.btn:hover {
-    background-color: #90D26D;
-}
-
-.btn:hover a {
-    color: #ffffff;
-}
-
-.text .mobile {
+.menu-bar {
     display: none;
 }
 
