--- a/css/contact.css
+++ b/css/contact.css
@@ -323,6 +323,10 @@ address {
     .logo .title {
         font-size: 19px;
     }
+
+    p  {
+        font-size: 15px;
+    }
 }
 
 @media(max-width: 400px) {
