--- a/css/menuPage.css
+++ b/css/menuPage.css
@@ -161,6 +161,18 @@ body {
 
 /* di bawah ini css untuk content resto menu */
 
+.pemesanan {
+    display: flex;
+    justify-content: center;
+    flex-direction: column;
+    align-items: center;
+    margin: 30px 0;
+}
+
+.pemesanan h2 {
+    font-size: 25px;
+}
+
 .menu-nav {
     position: relative;
     width: 100%;
@@ -187,7 +199,8 @@ body {
     flex: 1;
     padding: 0;
     justify-content: center;
-    border: solid 1px #000000;
+    border: solid 1px #ffffff;
+    border-radius: 5px;
 }
 
 .menu-list li a {
@@ -200,6 +213,13 @@ body {
     font-weight: bold;
     background-color: white;
     text-decoration: none;
+}
+
+.menu-list a:hover {
+    color: #ffffff;
+    background-color: #90D26D;
+    border: solid 1px #90D26D;
+    border-radius: 5px;
 }
 
 /* .pembatas {
@@ -381,6 +401,7 @@ body {
         height: auto;
         align-items: flex-start;
         padding: 10px 5%;
+        
     }
 
     .menu-list {
@@ -390,7 +411,8 @@ body {
 
     .menu-list li {
         width: 100%;
-        border: solid 1px #000000;
+        border: solid 1px #ffffff;
+        border-radius: 5px;
     }
 
     .menu-list li a {
@@ -406,6 +428,10 @@ body {
 
     .logo .title {
         font-size: 23px;
+    }
+
+    .pemesanan h2 {
+        font-size: 20px;
     }
 }
 
@@ -428,5 +454,9 @@ body {
 @media(max-width: 400px) {
     .logo .title {
         font-size: 17px;
+    }
+
+    .pemesanan h2 {
+        font-size: 16px;
     }
 }
