--- a/css/menuPage.css
+++ b/css/menuPage.css
@@ -334,6 +334,28 @@ body {
     justify-content: left;
 }
 
+.order-here {
+    width: 120px;
+    height: 40px;
+    background-color: #FF8F00;
+    border: none;
+    border-radius: 5px;
+    transition: 0.5s;
+}
+
+.order-here a {
+    text-decoration: none;
+    color: #DEFCF9;
+    font-size: 15px;
+    font-weight: 700;
+    transition: 0.5s;
+}
+
+.order-here:hover {
+    background-color: #90D26D;
+}
+
+
 
 /* akhir dari menu mobile */
 
